fix: overflow styles for tables on small screen

--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -38,7 +38,6 @@ tbody {
 }
 
 thead {
-  background: palette( default, contrast );
   border: 1px solid palette( dominant, dark );
 }
 
@@ -51,16 +50,16 @@ thead {
  ** @link http://lea.verou.me/2012/04/background-attachment-local/
  */
 .table-container {
-	background:
-		linear-gradient(to right, rgba(255,255,255,1) 30%, rgba(255,255,255,0)),
-		linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1) 70%) 0 100%,
-		radial-gradient(farthest-side at 0% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)),
-		radial-gradient(farthest-side at 100% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
-	background-repeat: no-repeat;
-	background-color: palette( default, contrast );
-	background-size: 2.5rem 100%, 2.5rem 100%, 1rem 100%, 1rem 100%;
+  background:
+    linear-gradient(to right, rgba(255,255,255,1) 30%, rgba(255,255,255,0)),
+    linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1) 70%) 0 100%,
+    radial-gradient(farthest-side at 0% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)),
+    radial-gradient(farthest-side at 100% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
+  background-repeat: no-repeat;
+  background-color: palette( default, contrast );
+  background-size: 2.5rem 100%, 2.5rem 100%, 1rem 100%, 1rem 100%;
   background-position: 0 0, 100%, 0 0, 100%;
-	background-attachment: local, local, scroll, scroll;
+  background-attachment: local, local, scroll, scroll;
   max-width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
